Fixed layout issue with blog

--- a/assets/scss/article.scss
+++ b/assets/scss/article.scss
@@ -6,7 +6,7 @@ body {
 }
 
 main {
-    margin: 0 30rem;
+    margin: 0 25%;
 }
 
 .image {
